@@ -1,3 +1,4 @@
+* Dialer (ECCP): add check for failure to list extensions in loginagent request
 * CallCenter Configuration, Campaigns Out, Do not Call List, Agent Console: 
   fix title display under elastixneo theme
 * CallCenter Configuration, Campaigns Out: Do not Call List:
